250810 22:01 장성주 html, css, js 연결까지 완료

--- a/webapp/assets/css/myPageCare/carePointList.css
+++ b/webapp/assets/css/myPageCare/carePointList.css
@@ -51,12 +51,13 @@ main {
   padding: 0;
 }
 
-.sidebar li {
+.sidebar ul li {
   padding: 12px 20px;
   font-size: 15px;
   cursor: pointer;
+  color: #ffffff;
 }
-
+/* ************** */
 .point-history {
   flex: 1;
   padding: 40px;
