--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -12,7 +12,7 @@ main {
 .main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: rgb(159, 159, 255);
+  background-color: #2f4db1;
   display: flex;
   flex-direction: column;
 }
@@ -25,7 +25,7 @@ main {
 
 .main_sidebar ul li {
   padding: 15px;
-  border-bottom: 1px solid black;
+  color: #ffffff;
 }
 
 /* ============================= */
