--- a/webapp/assets/css/myPageCare/carePostDP.css
+++ b/webapp/assets/css/myPageCare/carePostDP.css
@@ -58,15 +58,16 @@ main {
 .main_sidebar div {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
+  background-color: #2f4db1;
   border-radius: 100%;
   margin: 15px;
 }
 
 .main_sidebar ul li {
   padding: 15px;
+  color: #ffffff;
 }
-
+/* ***************************** */
 .post_dp {
   flex: 1;
   padding: 40px 100px;
