--- a/webapp/assets/css/myPageCare/careProfile.css
+++ b/webapp/assets/css/myPageCare/careProfile.css
@@ -43,8 +43,8 @@ main {
 
 .sidebar li {
   padding: 12px 20px;
-  font-size: 15px;
   cursor: pointer;
+  color: #ffffff;
 }
 
 /* ********************* */
