--- a/webapp/assets/css/myPageCare/careReferenceCheck.css
+++ b/webapp/assets/css/myPageCare/careReferenceCheck.css
@@ -47,8 +47,9 @@ main {
 }
 .main_sidebar ul li {
   padding: 15px;
+  color: #ffffff;
 }
-
+/* ********************* */
 .careReferenceCheck {
   flex: 1;
   padding: 40px 100px;
@@ -64,7 +65,6 @@ main {
   display: flex;
   gap: 12px;
   padding: 5px;
-  background-color: aqua;
   font-size: 24px;
   border: 2px solid #000;
 }
