--- a/webapp/assets/css/myPageCare/careReferenceDP.css
+++ b/webapp/assets/css/myPageCare/careReferenceDP.css
@@ -14,7 +14,7 @@ header,
 footer {
   width: 100%;
   height: 110px;
-  background-color: bisque;
+
 }
 
 main {
@@ -26,8 +26,9 @@ main {
 .main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: rgb(159, 159, 255);
+  background-color: #2f4db1;
   display: flex;
+  color: white;
   flex-direction: column;
 }
 .main_sidebar img {
@@ -41,14 +42,15 @@ main {
 .main_sidebar div {
   height: 150px;
   width: 150px;
-  background-color: rgb(27, 255, 217);
+  background-color: #2f4db1;
   border-radius: 100%;
   margin: 15px;
 }
 .main_sidebar ul li {
   padding: 15px;
+  color: #ffffff;
 }
-
+/* *********************** */
 .reference_dp {
   flex: 1;
   padding: 40px 100px;
@@ -79,7 +81,6 @@ main {
   display: flex;
   gap: 12px;
   padding: 5px;
-  background-color: aqua;
   font-size: 24px;
   border: 2px solid #000;
 }
