--- a/webapp/assets/css/post/postDetaillogin.css
+++ b/webapp/assets/css/post/postDetaillogin.css
@@ -130,3 +130,50 @@ form {
   width: 100px;
   border-left: 1px solid black;
 } 
+
+.checkmodal {
+  /* display: none; */
+  position: fixed;
+  top: 0;
+  width: 900px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 10px;
+  margin-left: 30%;
+}
+
+.modal_box {
+  background-color: aqua;
+  text-align: center;
+  padding: 30px;
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.modal_buttons button {
+  padding: 8px 20px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
+#check {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+#cancle {
+  background-color: blue;
+  color: white;
+  border: 1px solid black;
+}
