--- a/webapp/assets/css/careMember/careMemberModal.css
+++ b/webapp/assets/css/careMember/careMemberModal.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* 안 보여지게 해 둠 */
 }
 .modal_window{
   position: absolute;
@@ -43,8 +44,23 @@
   padding-top: 30px;
   padding-top: 20px
 }
-.modal_button_box{
+.letter_info{
+  /* background-color: yellow; */
+  width: 100%;
   margin-top: 20px;
+  font-size: 14px;
+}
+/* 쪽지 입력란 */
+#letter_text{
+  margin-top: 5px;
+  width: 380px;
+  height: 400px;
+  border: solid 2px black;
+  border-radius: 5px;
+  padding: 0 10px;
+}
+.modal_button_box{
+  margin-top: 10px;
   display: flex;
   width: 100%;
   /* background-color: greenyellow; */
@@ -109,21 +125,6 @@
   border-bottom: solid 2px black;
   padding: 5px 0;
 }
-/* 돌봄회원 가입/정보수정 신청 반려 */
-#reason_reject{
-  margin-top: 20px;
-  width: 350px;
-  height: 60px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 0 10px;
-}
-/* 신고게시물 삭제사유 */
-#reason_delete_post{
-  margin-top: 20px;
-  width: 350px;
-  height: 25px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 0 10px;
-}
+
+
+
