--- a/webapp/assets/css/myPageNormal/normalModify.css
+++ b/webapp/assets/css/myPageNormal/normalModify.css
@@ -45,7 +45,7 @@ form{
   margin: 10px 150px;
 }
 .arlim{
-  background-color: blueviolet;
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: row;
   margin: 0px 30px;
@@ -67,7 +67,7 @@ form{
 form .normalmodify{
   display: flex;
   flex-direction: column;
-  background-color: beige;
+  background-color: rgb(255, 255, 255);
   border: 1px solid black;
 }
 .member{
@@ -84,7 +84,7 @@ form .normalmodify{
   align-items: center;
   font-size: 20px;
   border-right: 1px solid black;
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   padding: 5px 0px;
 }
 .myinfo {
@@ -102,6 +102,7 @@ input{
   height: 40px;
   font-size: 20px;
   margin: 5px 0px;
+  border: 1px solid black;
 }
 button{
   margin: 10px;
