--- a/webapp/assets/css/myPageNormal/normalReferenceUp.css
+++ b/webapp/assets/css/myPageNormal/normalReferenceUp.css
@@ -47,7 +47,7 @@ main {
 .reference_info {
   display: flex;
   padding: 5px;
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   font-size: 24px;
   border: 2px solid black;
 }
@@ -67,6 +67,11 @@ main {
   height: auto;
   width: auto;
   height: 500px;
+}
+.reference_content textarea{
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 
 .buttons {
