--- a/webapp/assets/css/myPageNormal/normalsendMesseage.css
+++ b/webapp/assets/css/myPageNormal/normalsendMesseage.css
@@ -283,6 +283,11 @@ button {
   padding: 10px;
   margin-top: 10px;
 }
+.content textarea{
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+}
 
 .content input{
   font-size: 20px;
