--- a/webapp/assets/css/post/postWrite.css
+++ b/webapp/assets/css/post/postWrite.css
@@ -32,16 +32,18 @@ form {
 .write{
   height: 500px;
   border: 1px solid black;
-  display: flex;
+
   width: auto;
   white-space: normal;
+}
+.write textarea{
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 .write input{
   width: 100%;
   height: 40px;
-  line-height: 500px;
-  font-size: 20px;
-
 }
 
 .button{
