250811 14:05 피드백 작업중

--- a/webapp/assets/css/myPageCare/carePointreturn.css
+++ b/webapp/assets/css/myPageCare/carePointreturn.css
@@ -150,7 +150,14 @@ main {
   border-radius: 10px; 
   cursor: pointer; 
 }
-
+.btn_return_list a {
+  background-color: white;
+  border: 2px solid black;  
+  color: black;
+  padding: 12px 24px;
+  border-radius: 10px; 
+  cursor: pointer; 
+}
 .modal {
   display: none;
   position: fixed;
