--- a/webapp/assets/css/myPageNormal/normalPoint.css
+++ b/webapp/assets/css/myPageNormal/normalPoint.css
@@ -359,7 +359,7 @@ form{
   width: 100px;
 }
 
-#deleteBtn {
+#deletebutton {
   margin: 20px 20px 0px 20px;
   padding: 10px;
   border: 2px solid red;
