250811 18:15 장성주 마이페이지 돌봄  진행중

--- a/webapp/assets/css/myPageCare/careMatching.css
+++ b/webapp/assets/css/myPageCare/careMatching.css
@@ -186,10 +186,14 @@
   }
 
   .modal_container form label {
-    font-size: 14px;
+    font-size: 20px;
     margin-bottom: 5px;
   }
-
+.modal_container form label input{
+    width: 200px;
+    height: 60px;
+    font-size: 20px;
+  }
   .modal_container .modal_button {
     display: flex;
     justify-content: flex-end;
