--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -157,7 +157,7 @@ button {
 
 
 .modal {
-  display: block;
+  display: none;
   position: fixed;
   top: 0px;
   left: 50%;
@@ -174,7 +174,7 @@ button {
 }
 
 .modal.open {
-  /* display: flex; */
+  display: flex;
   visibility: visible;
   opacity: 1;
   transition: opacity 0.3s ease;
