--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -152,12 +152,11 @@ button {
   margin-left: 150px;
   border-radius: 15px;
   border: 0px;
-  cursor: pointer;
 }
 
 
 .modal {
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0px;
   left: 50%;
@@ -205,6 +204,7 @@ button {
   font-size: 14px;
   font-weight: bold;
   border: none;
+  transition: background-color 0.2s ease, transform 0.1s ease;
   min-width: 70px;   
 }
 
@@ -213,11 +213,7 @@ button {
   color: white;
   margin-left: 10px;
 }
-#confirmDelete_check {
-  background-color: #2F52AA;
-  color: white;
-  margin-left: 10px;
-}
+
 #cancelDelete {
   background-color: white;
   border: 2px solid red;
