--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -1,8 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'pretendard-regular';
 }
-
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400; font-style: normal;
+}
 main {
   width: 100%;
   height: calc(100vh - 200px);
