--- a/webapp/assets/css/myPageCare/careMark.css
+++ b/webapp/assets/css/myPageCare/careMark.css
@@ -10,32 +10,48 @@
   font-weight: 400;
   font-style: normal;
 }
+
+body {
+  background-color: #ffffff;
+}
+
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
   display: flex;
+  min-height: calc(100vh - 220px);
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
   background-color: #2f4db1;
-  display: flex;
-  flex-direction: column;
   color: white;
+  padding: 20px 0;
 }
 
-.main_sidebar ul li img {
-  height: 150px;
-  width: 150px;
-  border-radius: 100%;
+.main_sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
 }
 
-.main_sidebar ul li {
-  padding: 15px;
-  color: white;
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
 
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
 /* ============================= */
 .div_mark {
   flex: 1;
