--- a/webapp/assets/css/myPageCare/careMatching.css
+++ b/webapp/assets/css/myPageCare/careMatching.css
@@ -1,46 +1,57 @@
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: 'pretendard-regular';
-  }
-  @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-  }
-  body {
-    font-family: 'Noto Sans KR', sans-serif;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'pretendard-regular';
+}
 
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 
-  .sidebar img {
-    height: 130px;
-    width: 130px;
-    background-color: #ff80ab;
-    border-radius: 50%;
-    margin: 0 auto 20px;
-    display: block;
-  }
-  main {
-    display: flex;
-    min-height: calc(100vh - 220px);
-  }
-  .sidebar {
-    width: 180px;
-    background-color: #2f4db1;
-    color: white;
-    padding: 20px 0;
-  }
-  .sidebar ul {
-    list-style: none;
-  }
-  .sidebar li {
-    padding: 12px 20px;
-    font-size: 15px;
-    cursor: pointer;
-    color: #ffffff;
-  }
+body {
+  background-color: #ffffff;
+}
+
+main {
+  display: flex;
+  min-height: calc(100vh - 220px);
+}
+
+.sidebar {
+  width: 180px;
+  background-color: #2f4db1;
+  color: white;
+  padding: 20px 0;
+}
+
+.sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
 
   /* ****************** */
   .div_mark {
