--- a/webapp/assets/css/myPageCare/careModify.css
+++ b/webapp/assets/css/myPageCare/careModify.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'pretendard-regular';
 }
 
 @font-face {
@@ -10,48 +11,45 @@
   font-style: normal;
 }
 
-header,
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
+body {
+  background-color: #ffffff;
 }
 
 main {
   display: flex;
-  min-height: calc(100vh - 110px);
-  padding-bottom: 110px;
+  min-height: calc(100vh - 220px);
+}
+
+.main_sidebar {
+  width: 180px;
+  background-color: #2f4db1;
+  color: white;
+  padding: 20px 0;
 }
 
 .main_sidebar img {
   height: 130px;
   width: 130px;
-  background-color: #2f4db1;
+  background-color: #ff80ab;
   border-radius: 50%;
   margin: 0 auto 20px;
   display: block;
 }
 
-.main_sidebar {
-  flex: 0 0 180px;
-  width: 180px;
-  height: auto;
-  background-color: #2f4db1;
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-.main_sidebar div {
-  height: 150px;
-  width: 150px;
-  background-color: rgb(27, 255, 217);
-  border-radius: 100%;
-  margin: 15px;
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
 }
 
-.main_sidebar ul li {
-  padding: 15px;
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
 
