--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -3,33 +3,53 @@
   padding: 0;
   font-family: 'pretendard-regular';
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400; font-style: normal;
+  font-weight: 400;
+  font-style: normal;
 }
+
+body {
+  background-color: #ffffff;
+}
+
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
   display: flex;
+  min-height: calc(100vh - 220px);
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
   background-color: #2f4db1;
-  display: flex;
-  flex-direction: column;
+  color: white;
+  padding: 20px 0;
 }
 
-.main_sidebar ul li img {
-  height: 150px;
-  width: 150px;
-  border-radius: 100%;
+.main_sidebar img {
+  height: 130px;
+  width: 130px;
+  background-color: #ff80ab;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+  display: block;
 }
 
-.main_sidebar ul li {
-  padding: 15px;
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
 
@@ -149,7 +169,7 @@ form {
   padding: 0;
 }
 
-button {
+.btn_list_delete {
   background-color: red;
   color: white;
   width: 80px;
@@ -161,19 +181,19 @@ button {
 
 
 .modal {
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0px;
   left: 50%;
   transform: translateX(-50%);
   width: 400px;
   height: auto;
+  background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: flex-start;
   z-index: 500;
   visibility: hidden;
   opacity: 0;
-  border: 2px solid black;
   border-radius: 15px;
 }
 
@@ -181,7 +201,6 @@ button {
   display: flex;
   visibility: visible;
   opacity: 1;
-  transition: opacity 0.3s ease;
 }
 
 .modal_box {
@@ -191,6 +210,7 @@ button {
   width: 100%;
   text-align: center;
 }
+
 .modal_buttons {
   display: flex;
   justify-content: center;
@@ -209,8 +229,7 @@ button {
   font-size: 14px;
   font-weight: bold;
   border: none;
-  transition: background-color 0.2s ease, transform 0.1s ease;
-  min-width: 70px;   
+  min-width: 70px;
 }
 
 #confirmDelete {
@@ -223,4 +242,14 @@ button {
   background-color: white;
   border: 2px solid red;
   color: black;
+}
+
+#confirmDelete_check {
+  background-color: #2F52AA;
+  color: white;
+}
+
+#check_confirmDelete {
+  background-color: #2F52AA;
+  color: white;
 }
