--- a/webapp/assets/css/myPageCare/careReference.css
+++ b/webapp/assets/css/myPageCare/careReference.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: 'pretendard-regular';
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -10,43 +11,22 @@
   font-style: normal;
 }
 
-html {
-  height: 100%;
-}
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-main {
-  flex: 1 0 auto;
-}
-#footer {
-  margin-top: auto;
-}
-
-header {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
-}
-footer {
-  width: 100%;
-  height: 110px;
-  background-color: bisque;
+  background-color: #ffffff;
 }
 
 main {
-  width: 100%;
   display: flex;
+  min-height: calc(100vh - 220px);
 }
+
 .main_sidebar {
   width: 180px;
-  height: 100%;
   background-color: #2f4db1;
-  display: flex;
-  flex-direction: column;
+  color: white;
+  padding: 20px 0;
 }
+
 .main_sidebar img {
   height: 130px;
   width: 130px;
@@ -56,10 +36,23 @@ main {
   display: block;
 }
 
-.main_sidebar ul li {
-  padding: 15px;
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
 
 /* ============================= */
 .div_mark {
