--- a/webapp/assets/css/myPageCare/careReferenceDP.css
+++ b/webapp/assets/css/myPageCare/careReferenceDP.css
@@ -1,8 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Pretendard-Regular';
+  font-family: 'pretendard-regular';
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -10,27 +11,22 @@
   font-style: normal;
 }
 
-header,
-footer {
-  width: 100%;
-  height: 110px;
-
+body {
+  background-color: #ffffff;
 }
 
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
   display: flex;
+  min-height: calc(100vh - 220px);
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
   background-color: #2f4db1;
-  display: flex;
   color: white;
-  flex-direction: column;
+  padding: 20px 0;
 }
+
 .main_sidebar img {
   height: 130px;
   width: 130px;
@@ -39,17 +35,24 @@ main {
   margin: 0 auto 20px;
   display: block;
 }
-.main_sidebar div {
-  height: 150px;
-  width: 150px;
-  background-color: #2f4db1;
-  border-radius: 100%;
-  margin: 15px;
+
+.main_sidebar ul {
+  list-style: none;
+  padding-left: 0;
 }
-.main_sidebar ul li {
-  padding: 15px;
+
+.main_sidebar li {
+  padding: 12px 20px;
+  cursor: pointer;
   color: #ffffff;
 }
+
+.main_sidebar li a {
+  padding: 12px 20px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
 /* *********************** */
 .reference_dp {
   flex: 1;
