--- a/webapp/assets/css/post/postDetailNotlogin.css
+++ b/webapp/assets/css/post/postDetailNotlogin.css
@@ -159,7 +159,7 @@ form {
 }
 
 .modal_box {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   text-align: center;
   padding: 30px;
   border-radius: 30px;
@@ -177,6 +177,7 @@ form {
   border: none;
   font-size: 15px;
   background-color: #fff;
+  border: 1px solid black;
 }
 
 .modal_buttons {
@@ -220,7 +221,8 @@ form {
 }
 
 .modal_box {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
   text-align: center;
   padding: 30px;
   border-radius: 30px;
