--- a/webapp/assets/css/post/postModify.css
+++ b/webapp/assets/css/post/postModify.css
@@ -113,7 +113,8 @@ input{
 }
 
 .modal_box {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
   text-align: center;
   padding: 30px;
   border-radius: 30px;
@@ -132,8 +133,11 @@ input{
   cursor: pointer;
   border-radius: 15px;
 }
-
-#notcheck {
+#check{
+  background-color: white;
+  border: 1px solid black;
+}
+#cancle{
   background-color: blue;
   color: white;
   border: 1px solid black;
