--- a/webapp/assets/css/post/postWrite.css
+++ b/webapp/assets/css/post/postWrite.css
@@ -66,3 +66,51 @@ form {
   background-color: blue;
   color: white;
 }
+
+.notmodal {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 900px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 10px;
+  margin-left: 30%;
+}
+
+.modal_box {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
+  text-align: center;
+  padding: 30px;
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+#check{
+  border: 1px solid black;
+  background-color: white;
+}
+#cancle{
+  border: 1px solid black;
+  background-color: blue;
+  color: white;
+}
+
+.modal_buttons button {
+  padding: 8px 20px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+.button_write a{
+  color: white;
+}
