--- a/webapp/assets/css/myPageCare/carePost.css
+++ b/webapp/assets/css/myPageCare/carePost.css
@@ -204,7 +204,7 @@ form {
 }
 
 .modal_box {
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 30px;
   border-radius: 10px;
   width: 100%;
