--- a/webapp/assets/css/careMember/careMemberDetail.css
+++ b/webapp/assets/css/careMember/careMemberDetail.css
@@ -153,7 +153,7 @@ main{
 .comment_list{
   /* background-color: yellow; */
 }
-.comment a{
+.comment div{
   display: flex;
   height: 30px;
   border-bottom: solid 1px black;
