--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -1,8 +1,10 @@
+/* 전체적용 */
 *{
   margin: 0;
   padding: 0;
 }
 
+/* 폰트 */
 @font-face {
     font-family: 'Pretendard-Regular';
     src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -10,29 +12,34 @@
     font-style: normal;
 }
 
+/* main 세션 */
 main{
   width: 100%;
   height: calc(100vh - 220px);
   background-color: #FFE7C9;
 }
 
+/* 지도 컨테이너 */
 .map_container{
   display: flex;
   justify-content: center;
 }
 
+/* 지도 칸 */
 .map_api{
   align-content: center;
   width: 500px;
   height: 500px;
 }
 
+/* 지도 이미지 */
 .map_img{
   width: 100%;
   height: 80%;
   cursor: pointer;
 }
 
+/* 지도 사이드바 */
 .sidebar{
   display: none; /*평소에는 none이다가 활성화 되면 flex로 변경*/
   flex-direction: column;
@@ -40,6 +47,7 @@ main{
   margin: auto 40px;
 }
 
+/* 닫기 버튼 */
 .closebtn{
   text-align: right;
   font-size: 25px;
@@ -49,22 +57,26 @@ main{
   cursor:pointer;
 }
 
+/* 지도 정보, 지도 상세 설명 */
 .map_info, .map_detail{
   background-color: white;
   margin: 20px 30px 20px;
 }
 
+/* 지도 정보 */
 .map_info{
   width: 200px;
   height: 200px;
   justify-content: flex-end;
 }
+/* 지도 상세 설명 */
 .map_detail{
   width: 200px;
   height: 150px;
   justify-content: flex-end;
 }
 
+/* 모달박스 */
 .modalbox{
   display: none;
   background-color: rgba(217, 217, 217, 0.7);
@@ -77,6 +89,7 @@ main{
   left: 0;
 }
 
+/* 로그인 체크 모달 */
 .login_check_model{
   display: flex;
   flex-direction: column;
@@ -86,6 +99,7 @@ main{
   height: 300px;
 }
 
+/* 모달 닫기 버튼 */
 .modal_closebtn{
   text-align: right;
   font-size: 25px;
@@ -95,12 +109,14 @@ main{
   cursor:pointer;
 }
 
+/* 모달 글자칸 */
 .modal_text{
   font-size: 30px;
   margin: auto;
   padding-bottom: 20px;
 }
 
+/* 찜 버튼 */
 .wishbtn{
   width: 50px;
   height: 25px;
@@ -108,6 +124,7 @@ main{
   cursor: pointer;
 }
 
+/* 정보 내용 리스트 ul */
 .info_content{
   list-style-type: none;
 }
