--- a/webapp/assets/css/news/newsList.css
+++ b/webapp/assets/css/news/newsList.css
@@ -1,8 +1,10 @@
+/* 전체 내용 */
 * {
   margin: 0;
   padding: 0;
 }
 
+/* 폰트 */
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -10,40 +12,47 @@
   font-style: normal;
 }
 
+/* 메인 세션 */
 main {
   width: 100%;
   height: calc(100vh - 220px);
   background-color: #FFE7C9;
 }
 
+/* 전체 뉴스 컨테이너 */
 .search_result_container {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
+/* 전체 뉴스 탑메뉴 */
 .search_result_topmenu {
   display: flex;
   flex-direction: row;
   margin: 0px auto;
 }
 
+/* 검색 아이콘 */
 .searchIcon {
   width: 20px;
   height: 20px;
 }
 
+/* 검색 바 창 */
 .searchbar {
   display: flex;
   justify-content: center;
 }
 
+/* 검색 입력 창 */
 .underbar {
   background-color: #FFE7C9;
   border: 0px;
   border-bottom: 1px solid black;
 }
 
+/* 검색 버튼 */
 .search_btn {
   max-width: 20px;
   max-height: 20px;
@@ -52,23 +61,27 @@ main {
   cursor: pointer;
 }
 
+/* 제목 */
 .title {
   font-size: 30px;
   margin-right: 300px;
   margin-top: 70px;
 }
 
+/* 검색 창 바 */
 .searchbar {
   margin-left: 200px;
   margin-top: 50px;
 }
 
+/* 전체 카드 리스트 */
 .search_result_card{
   width: 800px;
   margin-left: auto;
   margin-right: auto;
 }
 
+/* 전체 카드 리스트 ul */
 .search_result_card > ul{
   display: flex;
   flex-direction: row;
@@ -76,6 +89,7 @@ main {
   flex-wrap: wrap;
 }
 
+/* 뉴스 카드 */
 .card{
   width: 350px;
   height: 150px;
@@ -85,16 +99,19 @@ main {
   border-radius: 20px;
 }
 
+/* 페이지 네이션 */
 .pagination{
   text-align: center;
   cursor: pointer;
 }
 
+/* 페이지 네이션 활성화 */
 .active{
   color: red;
   cursor: default;
 }
 
+/* 카드 뉴스 내용 */
 .card p {
   margin: 30px auto;
   text-align: center;
